<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray"
    tools:context="com.zicronofandroid.projetofinalmodulo2android.MainActivity">
    <LinearLayout
        android:id="@+id/row"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >

        <ImageView
            android:id="@+id/logotipo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/epcc" />

        <EditText
            android:id="@+id/insertName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/name"
            android:textColorHint="@color/white"
            android:singleLine="true" />

        <EditText
            android:id="@+id/insertLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/login"
            android:textColorHint="@color/white"
            android:singleLine="true" />

        <EditText
            android:id="@+id/insertPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:textColorHint="@color/white"
            android:inputType="textPassword"
            android:singleLine="true" />

        <Button
            android:id="@+id/btnRegistar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Register"
            android:layout_marginBottom="@dimen/padding"
            android:layout_marginRight="@dimen/padding"
            android:layout_marginLeft="@dimen/padding" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/voltarToLogin"
            android:id="@+id/goLogin"
            android:textColor="@color/white"
            android:layout_gravity="center_horizontal" />

    </LinearLayout>
</RelativeLayout>