<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray"
    tools:context="com.zicronofandroid.projetofinalmodulo2android.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/logotipo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/epcc" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:singleLine="true"
            android:id="@+id/editLogin"
            android:hint="@string/login"
            android:textColorHint="@color/white"
            android:layout_marginTop="@dimen/padding"
            android:layout_marginBottom="@dimen/padding"
            android:layout_marginRight="@dimen/padding"
            android:layout_marginLeft="@dimen/padding" />

        <EditText
            android:id="@+id/editPass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:hint="@string/password"
            android:textColorHint="@color/white"
            android:singleLine="true"
            android:layout_marginBottom="@dimen/padding"
            android:layout_marginRight="@dimen/padding"
            android:layout_marginLeft="@dimen/padding" />

        <CheckBox
            android:id="@+id/keepLogged"
            android:text="@string/checkLeg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/btnLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:layout_marginBottom="@dimen/padding"
            android:layout_marginRight="@dimen/padding"
            android:layout_marginLeft="@dimen/padding" />

        <Button
            android:id="@+id/btnRegistar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/registar"
            android:layout_marginBottom="@dimen/padding"
            android:layout_marginRight="@dimen/padding"
            android:layout_marginLeft="@dimen/padding" />
    </LinearLayout>
</RelativeLayout>