<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/layoutContainer"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >

        <LinearLayout
            android:id="@+id/imageRow"
            android:layout_width="match_parent"
            android:gravity="center"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="@dimen/imgBig"
                android:layout_height="@dimen/imgBig"
                android:src="@drawable/user" />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/textRow"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:orientation="vertical">

            <TextView
                android:id="@+id/login"
                android:text="@string/login"
                android:textAlignment="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/titleDetails" />
            <TextView
                android:id="@+id/loginView"
                android:textAlignment="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/textDetails" />

            <TextView
                android:id="@+id/nome"
                android:text="@string/name"
                android:textAlignment="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/titleDetails" />
            <TextView
                android:id="@+id/nomeView"
                android:textAlignment="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/textDetails" />

            <TextView
                android:id="@+id/password"
                android:text="@string/password"
                android:textAlignment="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/titleDetails" />
            <TextView
                android:id="@+id/passwordView"
                android:textAlignment="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/textDetails" />

            <TextView
                android:id="@+id/level"
                android:text="Nivel"
                android:textAlignment="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/titleDetails" />
            <TextView
                android:id="@+id/levelView"
                android:textAlignment="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/textDetails" />
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>